editors/tree-sitter-sie/grammar.js
    source_file: ($) => repeat($._declaration),

    /* ------------------------------------------------------------------ *
     * declarations
     * ------------------------------------------------------------------ */

    _declaration: ($) =>
      choice(
        $.import_declaration,
        $.include_directive,
        $.conditional_declaration,
        $.const_declaration,
        $.macro_declaration,
        $.alias_declaration,
        $.template_declaration,
        $.extend_declaration,
        $.error_directive,
        $.static_assert_directive,
        $.global_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.function_declaration,
      ),

    const_declaration: ($) =>
      seq(
        choice("@const", seq(field("visibility", $.attribute), "@const")),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", $._expression),
        ";",
      ),

    macro_declaration: ($) =>
      seq(
        "@macro",
        field("name", $.identifier),
        optional(field("parameters", $.macro_parameters)),
        choice(
          seq("=", field("value", $._expression), ";"),
          field("body", $.block),
        ),
      ),

    macro_parameters: ($) => seq("(", commaSep($.identifier), ")"),

    alias_declaration: ($) =>
      seq(
        "@type",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        "=",
        field("type", $.type),
        ";",
      ),

    template_declaration: ($) =>
      seq(
        "@template",
        field("type_parameters", $.type_parameters),
        choice(
          field("body", $.template_body),
          field(
            "declaration",
            choice($.extend_declaration, $.function_declaration),
          ),
        ),
      ),

    template_body: ($) =>
      seq(
        "{",
        repeat(choice($.extend_declaration, $.function_declaration)),
        "}",
      ),

    extend_declaration: ($) =>
      seq(
        "@extend",
        optional(field("type_parameters", $.type_parameters)),
        field("type", $.type),
        ":",
        field("interfaces", commaSep1($.type)),
        choice(";", field("body", $.extend_body)),
      ),

    struct_declaration: ($) =>
      seq(
        repeat($.attribute),
        field("kind", choice("struct", "union", "interface")),
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        optional(seq(":", field("interfaces", commaSep1($.type)))),
        choice(";", seq(field("body", $.struct_body), optional(";"))),
      ),

    struct_body: ($) =>
      seq("{", repeat(choice($.field_declaration, $.action_declaration)), "}"),

    // an interface's body holds the signatures it requires
    action_declaration: ($) =>
      seq(
        "fn",
        field("name", $.identifier),
        optional(field("type_parameters", $.type_parameters)),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $.type))),
        ";",
      ),

    // An extension block supplies the receiver for each method. This rule
    // is deliberately receiver-neutral so struct bodies can reuse it when
    // inline struct methods are added.
    extend_body: ($) => seq("{", repeat($.method_declaration), "}"),

    method_declaration: ($) =>
      seq(
        repeat($.attribute),
        "fn",
        field("name", $._method_identifier),
        optional(field("type_parameters", $.type_parameters)),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $.type))),
        choice(field("body", $.block), $.asm_body, ";"),
      ),

    field_declaration: ($) =>
      seq(
        choice(
          seq(
            field("name", $.identifier),
            ":",
            field("type", $.type),
            optional(seq("=", field("default", $._expression))),
          ),
          // an unnamed 'struct { ... }' member hoists its fields
          field("type", $.anonymous_type),
        ),
        ";",
      ),

    enum_declaration: ($) =>
      seq(
        repeat($.attribute),
        "enum",
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "{",
        commaSep($.enum_member),
        optional(","),
        "}",
        optional(";"),
      ),

    enum_member: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("=", field("value", $._expression))),
      ),

    type_parameters: ($) => seq("<", commaSep1($.type_parameter), ">"),

    /* ------------------------------------------------------------------ *
     * functions
     * ------------------------------------------------------------------ */

    function_declaration: ($) =>
      seq(
        repeat($.attribute),
        "fn",
        field("name", $.function_name),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $.type))),
        choice(field("body", $.block), $.asm_body, ";"),
      ),

    // 'name', 'name<T>', 'S::method', 'S<T>::method<U>', 'T[]::method'.
    // One shape parses them all: the '::' is what makes the first name a
    // receiver rather than the function's own
    function_name: ($) =>
      seq(
        field("name", choice($.identifier, $.array_receiver)),
        optional(field("type_parameters", $.type_parameters)),
        optional(
          seq(
            "::",
            field("method", $._method_identifier),
            optional(field("method_type_parameters", $.type_parameters)),
          ),
        ),
      ),

    array_receiver: ($) => seq($.identifier, "[", "]"),

    parameters: ($) =>
      seq(
        "(",
        commaSep(choice($.self_parameter, $.parameter, $.variadic_parameter, "...")),
        ")",
      ),

    self_parameter: ($) => seq(optional("const"), "&", "self"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("default", $._expression))),
      ),

    // 'args...' is the trailing borrowed 'const Any[]' sugar
    attribute: ($) =>
      seq(
        field("name", $.attribute_name),
        optional(seq("(", commaSep($._expression), ")")),
      ),

    attribute_name: ($) => token(seq("@", /[a-zA-Z_]\w*/)),

    block: ($) => seq("{", repeat($._statement), "}"),

    _statement: ($) =>
      choice(
        $.let_statement,
        $.destructuring_statement,
        $.assignment_statement,
        $.expression_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.foreach_statement,
        $.case_statement,
        $.return_statement,
        $.break_statement,
        $.continue_statement,
        $.emit_statement,
        $.defer_statement,
        $.drop_statement,
        $.try_statement,
        $.block,
        ";",
      ),

    let_statement: ($) => seq($._let_binding, ";"),

    _let_binding: ($) =>
      seq(
        "let",
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("value", $._expression))),
      ),

    expression_statement: ($) => seq($._expression, ";"),

    // a statement whose value is a 'try' with an 'except' arm is closed
    // by the arm's brace, the way an if's body closes an if, so it takes
    // no ';' of its own; a '??' fallback is part of the expression, and
    // an expression_statement covers it
    return_statement: ($) => seq("return", optional($._expression), ";"),
    _expression: ($) =>
      choice(
        $.identifier,
        $.self,
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.char_literal,
        $.boolean_literal,
        $.null_literal,
        $.array_literal,
        $.aggregate_literal,
        $.tuple_expression,
        $.parenthesized_expression,
        $.block_expression,
        $.call_expression,
        $.generic_reference,
        $.scoped_identifier,
        $.field_expression,
        $.arrow_expression,
        $.index_expression,
        $.slice_expression,
        $.unary_expression,
        $.binary_expression,
        $.cast_expression,
        $.ternary_expression,
        $.compile_time_expression,
        $.asm_expression,
        $.try_expression,
      ),

    self: ($) => "self",

    call_expression: ($) =>
      prec(
        PREC.postfix,
        seq(
          field("function", choice($.identifier, $.field_expression, $.scoped_identifier, $.arrow_expression)),
          optional(field("type_arguments", $.type_arguments)),
          field("arguments", $.arguments),
        ),
      ),

    arguments: ($) => seq("(", commaSep($._expression), optional(","), ")"),

    // 'f<i32>' outside a call references the instance
    type_arguments: ($) => seq(token.immediate("<"), commaSep1($.type), ">"),

    // 'A::member', a method reference or an enum member
    // 'A::member', 'a.b::member' through a module binding, 'i64::format'
    // on a primitive: a method reference or an enum member
    field_expression: ($) =>
      prec(PREC.postfix, seq(field("value", $._expression), ".", field("field", $._method_identifier))),

    cast_expression: ($) =>
      prec.left(PREC.cast, seq(field("value", $._expression), "as", field("type", $.type))),

    compile_time_expression: ($) =>
      seq(
        field("name", choice("@sizeof", "@typename", "@typeid", "@typeof")),
        "(",
        field("argument", choice($._expression, $.type)),
        ")",
      ),

    type: ($) =>
      choice(
        $.generic_type,
        $.qualified_type,
        $.identifier,
        $.pointer_type,
        $.array_type,
        $.sized_array_type,
        $.reference_type,
        $.const_type,
        $.function_type,
        $.raw_type,
        $.anonymous_type,
      ),

    // a dotted type name takes its whole chain: 'x as pkg.Type' casts to
    // the qualified type, not to 'pkg' with a field read after it
    qualified_type: ($) =>
      prec.right(2, seq(sep1($.identifier, "."), optional($.type_arguments))),

    array_type: ($) => prec(PREC.postfix, seq($.type, "[", "]")),
    function_type: ($) =>
      prec.right(seq(
        "fn",
        "(",
        commaSep($.type),
        ")",
        optional(seq("->", $.type)),
      )),

    identifier: ($) => /[a-zA-Z_]\w*/,

    // 'drop' starts a statement but remains available as a method name,
    // notably for the builtin Slot<T>::drop raw-storage operation.
    _method_identifier: ($) => choice($.identifier, alias("drop", $.identifier)),

    integer_literal: ($) => token(choice(/\d+/, /0[xX][0-9a-fA-F]+/)),
    type_parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", field("bound", $.type))),
      ),

    // Kept last so adding the statement does not renumber the grammar's
    // established expression and lexical symbols in generated parsers.
    drop_statement: ($) => seq("drop", $._expression, ";"),
  },
});

function commaSep(rule) {
  return optional(commaSep1(rule));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
