editors/tree-sitter-sie/test/corpus/drop.txt
====================
Explicit destruction
====================

fn destroy_active(&self) {
  drop self.value;
}

---

(source_file
  (function_declaration
    name: (function_name
      name: (identifier))
    parameters: (parameters
      (self_parameter))
    body: (block
      (drop_statement
        (field_expression
          value: (self)
          field: (identifier))))))

====================
Drop method
====================

fn Slot<T>::drop(&self) {
  self.value.drop();
}

---

(source_file
  (function_declaration
    name: (function_name
      name: (identifier)
      type_parameters: (type_parameters
        (type_parameter
          name: (identifier)))
      method: (identifier))
    parameters: (parameters
      (self_parameter))
    body: (block
      (expression_statement
        (call_expression
          function: (field_expression
            value: (field_expression
              value: (self)
              field: (identifier))
            field: (identifier))
          arguments: (arguments))))))
