editors/tree-sitter-sie/test/corpus/extend_blocks.txt
========================
Bounded extension blocks
========================

@extend<T: Scalar> T[]: Hashable {
  fn hash(const &self) -> u64 {
    return 0;
  }
}

---

(source_file
  (extend_declaration
    type_parameters: (type_parameters
      (type_parameter
        name: (identifier)
        bound: (type
          (qualified_type
            (identifier)))))
    type: (type
      (array_type
        (type
          (qualified_type
            (identifier)))))
    interfaces: (type
      (qualified_type
        (identifier)))
    body: (extend_body
      (method_declaration
        name: (identifier)
        parameters: (parameters
          (self_parameter))
        return_type: (type
          (qualified_type
            (identifier)))
        body: (block
          (return_statement
            (integer_literal)))))))

========================
Where declaration block
========================

@where<T: Scalar> {
  @extend T[]: Hashable {
    fn hash(const &self) -> u64 {
      return 0;
    }
  }

  fn T[]::other(const &self) -> u64 {
    return 1;
  }
}

---

(source_file
  (template_declaration
    (type_parameters
      (type_parameter
        (identifier)
        (type
          (qualified_type
            (identifier)))))
    (template_body
      (extend_declaration
        (type
          (array_type
            (type
              (qualified_type
                (identifier)))))
        (type
          (qualified_type
            (identifier)))
        (extend_body
          (method_declaration
            (identifier)
            (parameters
              (self_parameter))
            (type
              (qualified_type
                (identifier)))
            (block
              (return_statement
                (integer_literal))))))
      (function_declaration
        (function_name
          (array_receiver
            (identifier))
          (identifier))
        (parameters
          (self_parameter))
        (type
          (qualified_type
            (identifier)))
        (block
          (return_statement
            (integer_literal)))))))

========================
Where declaration decorators
========================

@where<T: Scalar>
@extend T[]: Hashable {
  fn hash(const &self) -> u64 {
    return 0;
  }
}

@where<T: Scalar>
fn T[]::other(const &self) -> u64 {
  return 1;
}

---

(source_file
  (template_declaration
    (type_parameters
      (type_parameter
        (identifier)
        (type
          (qualified_type
            (identifier)))))
    (extend_declaration
      (type
        (array_type
          (type
            (qualified_type
              (identifier)))))
      (type
        (qualified_type
          (identifier)))
      (extend_body
        (method_declaration
          (identifier)
          (parameters
            (self_parameter))
          (type
            (qualified_type
              (identifier)))
          (block
            (return_statement
              (integer_literal)))))))
  (template_declaration
    (type_parameters
      (type_parameter
        (identifier)
        (type
          (qualified_type
            (identifier)))))
    (function_declaration
      (function_name
        (array_receiver
          (identifier))
        (identifier))
      (parameters
        (self_parameter))
      (type
        (qualified_type
          (identifier)))
      (block
        (return_statement
          (integer_literal))))))
